Added more styling and beginning jQuery
jQuery to add item to list on click

--- a/css/main.css
+++ b/css/main.css
@@ -7,39 +7,62 @@ body {
 
 }
 
+/* TITLE */
+
 h1 {
 	text-align: center; 
 	font-weight: bolder;
 	font-size: 2em;
 	font-family: sans-serif;
 	border: solid black; 
-
 	border-radius: 20px;
 	padding: 10px;
+
 }
 
 h1#title {
-	
 	width: 250px;
-	
 	background-color: white;
-	
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 20px;
 }
 
+/* HELP BUTTON */
+
 h2 {
+	font-size: 2em;
+	font-weight: bold;
+	margin-left: auto;
+	margin-right: auto;
+	font-family: serif;
+	text-align: right;
+	float: right;
+	margin-right: 20px;
+	top: 0px;
+	display: inline-block;
+}
+
+/* ADD / PLUS BUTTON FOR FORM */
+
+#add-button {
 	text-align: center;
 	font-weight: bold;
 	font-family: serif;
 	font-size: 1.5em;
-	border: solid black;
-	border-radius: 40px;
-	padding: 2px;
+	padding-top: 20px;
+
 }
 
-h2#add-button {
+.plus {
+	font-size: 1em;
+	font-weight: bolder;
+	color: red;
+	background-color: lightGrey;
+	border-radius: 20px;
+}
+
+/*h2#add-button {
 
 	width: 50px;
 	background-color: white;
@@ -47,7 +70,9 @@ h2#add-button {
 	margin-right: auto;
 	margin-top: 5px;
 
-}
+} */
+
+/* LIST ITEMS */
 
 li {
 
