--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,10 @@ body {
 
 .main {
 
+	text-align: center;
+	/*margin-left: auto;
+	margin-right: auto;*/
+
 }
 
 /* TITLE */
@@ -26,28 +30,43 @@ h1#title {
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 20px;
+	display: inline-block;
 }
 
 /* HELP BUTTON */
 
-h2 {
+h2#help {
 	font-size: 2em;
 	font-weight: bold;
-	margin-left: auto;
-	margin-right: auto;
+	margin-left: 80%;
+	margin-right: 20%;
 	font-family: serif;
 	text-align: right;
-	float: right;
-	margin-right: 20px;
+	margin-top: 0px;
+	margin-right: 30px;
 	top: 0px;
-	display: inline-block;
 }
+
+/*#help {
+	text-align: right;
+	font-size: 1.2em;
+	font-weight: bold;
+	margin-top: 0px;
+}*/
 
 /* ADD / PLUS BUTTON FOR FORM */
 
 form {
     display: inline-block;
+    margin-top: 10px;
+    text-align: center;
 }
+
+.item {
+	margin: 10px;
+	text-align: center;
+}
+
 
 #button{
     display: inline-block;
@@ -78,6 +97,20 @@ form {
 	border-radius: 20px;
 }
 
+.checkbox {
+	font-size: :;em;
+}
+
+/* DELETE BUTTON & STYLING */
+
+.delete-item {
+	margin-left: 4px;
+}
+
+img {
+	max-height: .9em;
+}
+
 /*h2#add-button {
 
 	width: 50px;
@@ -100,15 +133,3 @@ li {
 	color: red;
 }
 
-
-p {
-
-}
-
-#main-list {
-
-}
-
-.list-item {
-
-}
