--- a/css/main.css
+++ b/css/main.css
@@ -6,12 +6,20 @@ body {
 .main {
 
 	text-align: center;
-	/*margin-left: auto;
-	margin-right: auto;*/
+	margin-left: auto;
+	margin-right: auto;
 
 }
 
 /* TITLE */
+
+.hgroup {
+
+	margin-left: auto;
+	margin-right: auto;
+	display: relative;
+}
+
 
 h1 {
 	text-align: center; 
@@ -20,8 +28,13 @@ h1 {
 	font-family: sans-serif;
 	border: solid black; 
 	border-radius: 20px;
+	-moz-border-radius: 20px;
+	-o-border-radius: 20px;
+	-webkit-border-radius: 20px;
+	-ms-border-radius: 20px;
 	padding: 10px;
-
+	top: 30px;
+	margin: 20px;
 }
 
 h1#title {
@@ -29,22 +42,28 @@ h1#title {
 	background-color: white;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 20px;
-	display: inline-block;
+	margin-top: 20px:
 }
 
 /* HELP BUTTON */
 
-h2#help {
-	font-size: 2em;
+h2 {
+	text-align: right;
+	display: inline-block;
+}
+
+#help {
+	font-size: 1.3em;
 	font-weight: bold;
-	margin-left: 80%;
-	margin-right: 20%;
 	font-family: serif;
 	text-align: right;
-	margin-top: 0px;
-	margin-right: 30px;
-	top: 0px;
+	top: 20px;
+	right: 80px;
+	position: absolute;
+}
+
+#help-info {
+	display: none;
 }
 
 /*#help {
@@ -63,10 +82,18 @@ form {
 }
 
 .item {
-	margin: 10px;
-	text-align: center;
+	/*margin: 10px;*/
+	text-align: left;
+	/*margin-left: auto;
+	margin-right: auto;*/
 }
 
+.list {
+	text-align: center;
+	margin-left: 620px;
+	margin-right: 300px;
+	padding-top: 20px;
+}
 
 #button{
     display: inline-block;
@@ -77,6 +104,10 @@ form {
 	font-weight:bold;
 	color:#ffffff;
 	border-radius: 5px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-o-border-radius: 5px;
+	-ms-border-radius: 5px;
 	text-align:center;
 	margin-top:2px;
 }
@@ -95,6 +126,10 @@ form {
 	color: red;
 	background-color: lightGrey;
 	border-radius: 20px;
+	-webkit-border-radius: 20px;
+	-moz-border-radius: 20px;
+	-o-border-radius: 20px;
+	-ms-border-radius: 20px;
 }
 
 .checkbox {
